apps/google-bq/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
            - name: DB_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: my-database-secret
                   key: user
            - name: DB_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: my-database-secret
                   key: password
              - name: MY_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: my-own-secret
                   key: user
            - name: MY_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: my-own-secret
                   key: password
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
